--- a/index.html
+++ b/index.html
@@ -6,6 +6,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <style>body{ margin: 0;}</style>
     <title>Project Grafika Komputer</title>
+    <style>
+        canvas :focus{
+            outline: none;
+        }
+    </style>
 </head>
 <body>
     <script type="module" src="main.js"></script>
